[HSP3LL]部分式だけでも最適化する [HSP3LL]PValのロードをキャッシュ [HSP3LL]JIT結果の関数ポインタをキャッシュ [HSP3LL]double関数とtan関数を実装 [HSP3LL]1次元と2次元の配列のインデックスをスタックを使わずに処理する
Former-commit-id: 808ba483e9c776d8e4d258f310e98e072d4146aa

--- a/hsp3ll/hsp3ll_vc2008.vcxproj
+++ b/hsp3ll/hsp3ll_vc2008.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="chsp3rev.h" />
     <ClInclude Include="..\hsp3\win32gui\comobj.h" />
     <ClInclude Include="..\hsp3\win32gui\comobj_event.h" />
+    <ClInclude Include="compilecontext.h" />
     <ClInclude Include="csstack.h" />
     <ClInclude Include="..\hsp3\dpmread.h" />
     <ClInclude Include="..\hsp3\win32gui\fcpoly.h" />
@@ -164,6 +165,7 @@
     <ClInclude Include="..\hsp3\hsp3gr.h" />
     <ClInclude Include="..\hsp3\win32gui\hsp3gr_wingui.h" />
     <ClInclude Include="..\hsp3\hsp3int.h" />
+    <ClInclude Include="hsp3op.h" />
     <ClInclude Include="hsp3r.h" />
     <ClInclude Include="..\hsp3\hsp3struct.h" />
     <ClInclude Include="..\hsp3\win32gui\hsp3win.h" />
