[HSP3LL] 配列インデックスの範囲チェックを省くオプション追加
Former-commit-id: 60a9eba140468c489c807b3434e8cc27d2376452

--- a/hsp3ll/hsp3ll_vc2013.vcxproj
+++ b/hsp3ll/hsp3ll_vc2013.vcxproj
@@ -97,6 +97,7 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <TargetMachine>MachineX86</TargetMachine>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
