[hsp3dish][emscripten]メモリのアライメント調整
Former-commit-id: fb75ec2d776dd013ca7ded247b31e9c37e95aa45

--- a/hsp3dish/makefile.emscripten
+++ b/hsp3dish/makefile.emscripten
@@ -9,7 +9,8 @@ CFLAGS_CORE = -Wall -DHSPDISH -DHSPEMSCRIPTEN -DHSPDEBUG \
 	   -s USE_TYPED_ARRAYS=2 -s DISABLE_EXCEPTION_CATCHING=0 \
 	   --memory-init-file 0
 CFLAGS_DEBUG =
-#CFLAGS_DEBUG = -g4 --js-opts 0
+#CFLAGS_DEBUG = -g3 --js-opts 0
+#CFLAGS_DEBUG = -g3 --js-opts 0 -s SAFE_HEAP=1
 
 CFLAGS = $(CFLAGS_CORE) $(CFLAGS_DEBUG) \
 	   -s LEGACY_GL_EMULATION=1 -O3
