--- a/tools/win32/hsed3_footy2/Poppad.rc
+++ b/tools/win32/hsed3_footy2/Poppad.rc
@@ -94,18 +94,23 @@ BEGIN
     END
     POPUP "ツール(&T)"
     BEGIN
-        MENUITEM "PACKFILE編集(&E)...",           IDM_PACKED
-        MENUITEM "DPMファイル作成(&P)",               IDM_PACKGO
-        MENUITEM "EXEファイル作成(&M)...",            IDM_MKEXE1
-        MENUITEM "スクリーンセーバー作成(&S)",             IDM_MKEXE2
         MENUITEM "ソースフォルダを開く(&O)...",           IDM_OPEN_SRCFOLDER
         MENUITEM "HSPアシスタント起動(&F)...",          IDM_START_RUNTIMEMAN
-        MENUITEM "スクリプト自動作成(&T)...",            IDM_AHTTOOL
         MENUITEM "HSPTVブラウザ起動(&H)...",          IDM_HSPTV
-        MENUITEM "指定フォルダからDPM作成(D)...",         ID_DIRDPM
-        MENUITEM "指定ファイルをCソースに変換(C)...",        ID_SRCCNV
+        MENUITEM "指定フォルダからDPM作成(&D)...",        ID_DIRDPM
+        MENUITEM "HSP3Dish / Cソース変換(&C)...",    ID_SRCCNV
+        MENUITEM "HGIMG4ツールを開く(&G)...",         IDM_HGIMG4TOOL
+        MENUITEM "ペイントツールを開く(&W)...",           IDM_PAINT
         MENUITEM SEPARATOR
         MENUITEM "オプション(&O)...",                IDM_OPTION
+        POPUP "レガシーツール(&R)"
+        BEGIN
+            MENUITEM "PACKFILE編集(&E)...",           IDM_PACKED
+            MENUITEM "DPMファイル作成(&P)",               IDM_PACKGO
+            MENUITEM "EXEファイル作成(&M)...",            IDM_MKEXE1
+            MENUITEM "スクリーンセーバー作成(&S)",             IDM_MKEXE2
+            MENUITEM "スクリプト自動作成(&T)...",            IDM_AHTTOOL
+        END
     END
     POPUP "外部ツール(&X)"
     BEGIN
@@ -248,7 +253,7 @@ BEGIN
     CTEXT           "HSP script editor",IDC_STATIC,41,12,67,8
     ICON            "OniPad",IDC_STATIC,8,8,20,20
     CTEXT           "For Windows version 3.5 beta",IDC_STATIC,47,19,89,8
-    CTEXT           "Copyright 1997-2015 onion software",IDC_STATIC,0,37,159,8
+    CTEXT           "Copyright 1997-2016 onion software",IDC_STATIC,0,37,159,8
     DEFPUSHBUTTON   "OK",IDOK,49,101,57,14,WS_GROUP
     CTEXT           "http://hsp.tv/",IDC_STATICLINK,34,85,90,8,SS_NOTIFY
     LTEXT           "Information available at:",IDC_STATIC,30,77,71,8
@@ -927,6 +932,13 @@ END
 STRINGTABLE 
 BEGIN
     IDM_AHTTOOL             "Peasエディタを起動"
+END
+
+STRINGTABLE 
+BEGIN
+    IDM_PAINT               "ペイントツールを起動する"
+    IDM_HGIMG4TOOL          "HGIMG4ツールを開く"
+    IDM_REGACYTOOL          "レガシー機能を呼び出す"
 END
 
 #endif    // 日本語 resources
