--- a/tools/win32/hsed3_footy2/Poppad.rc
+++ b/tools/win32/hsed3_footy2/Poppad.rc
@@ -91,6 +91,7 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "起動オプション(&O)...",              IDM_CMDOPT
         MENUITEM "Debugウインドゥ表示(&D)",            IDM_DEBUG
+		MENUITEM "UTF8で出力(&U)",                IDM_UTF8OUT
     END
     POPUP "ツール(&T)"
     BEGIN
