android HSP3Dishランタイムの更新 dll呼び出しコードの修正
Former-commit-id: 03b382bd7ab41e3f5f77053fa21dbdb6174b73ed

--- a/hsp3/win32gui/hsp3_vc2013.vcxproj
+++ b/hsp3/win32gui/hsp3_vc2013.vcxproj
@@ -117,7 +117,7 @@
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
     <GenerateManifest>false</GenerateManifest>
-    <TargetName>$(ProjectName)w</TargetName>
+    <TargetName>$(ProjectName)utf</TargetName>
     <TargetExt>.hrt</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-unicode|Win32'">
@@ -125,7 +125,7 @@
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
     <GenerateManifest>false</GenerateManifest>
-    <TargetName>$(ProjectName)w</TargetName>
+    <TargetName>$(ProjectName)utf</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-unicode|Win32'">
     <OutDir>$(Configuration)\</OutDir>
@@ -216,7 +216,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>$(OutDir)$(ProjectName)w$(TargetExt)</OutputFile>
+      <OutputFile>$(OutDir)$(ProjectName)utf$(TargetExt)</OutputFile>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
@@ -240,7 +240,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>$(OutDir)$(ProjectName)W.exe</OutputFile>
+      <OutputFile>$(OutDir)$(ProjectName)utf.exe</OutputFile>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
