--- a/hsp3dish/win32gp/hsp3gp.vcxproj
+++ b/hsp3dish/win32gp/hsp3gp.vcxproj
@@ -220,13 +220,18 @@
     <ClCompile Include="..\..\hsp3\stack.cpp" />
     <ClCompile Include="..\..\hsp3\strbuf.cpp" />
     <ClCompile Include="..\..\hsp3\strnote.cpp" />
+    <ClCompile Include="..\..\hsp3\win32gui\hsp3extlib.cpp" />
+    <ClCompile Include="..\..\hsp3\win32gui\hsp3ext_win.cpp" />
+    <ClCompile Include="..\..\hsp3\win32gui\supio_win.cpp" />
     <ClCompile Include="..\geometry.cpp" />
     <ClCompile Include="..\hsp3gr_dish.cpp" />
     <ClCompile Include="..\hspwnd_dish.cpp" />
     <ClCompile Include="..\hspwnd_obj.cpp" />
     <ClCompile Include="..\random.cpp" />
     <ClCompile Include="..\sysreq.cpp" />
-    <ClCompile Include="dxsnd.cpp" />
+    <ClCompile Include="..\win32\dxsnd.cpp" />
+    <ClCompile Include="..\win32\mmman.cpp" />
+    <ClCompile Include="..\win32\webtask_win.cpp" />
     <ClCompile Include="gamehsp.cpp" />
     <ClCompile Include="gpcam.cpp" />
     <ClCompile Include="gplgt.cpp" />
@@ -234,12 +239,7 @@
     <ClCompile Include="gpphy.cpp" />
     <ClCompile Include="hgiox.cpp" />
     <ClCompile Include="hsp3dish.cpp" />
-    <ClCompile Include="hsp3extlib.cpp" />
-    <ClCompile Include="hsp3ext_win.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="mmman.cpp" />
-    <ClCompile Include="supio_win.cpp" />
-    <ClCompile Include="webtask_win.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\hsp3\dpmread.h" />
@@ -258,8 +258,11 @@
     <ClInclude Include="..\..\hsp3\strbuf.h" />
     <ClInclude Include="..\..\hsp3\strnote.h" />
     <ClInclude Include="..\..\hsp3\supio.h" />
+    <ClInclude Include="..\..\hsp3\win32gui\hsp3extlib.h" />
+    <ClInclude Include="..\..\hsp3\win32gui\hsp3ext_win.h" />
     <ClInclude Include="..\..\hsp3\win32gui\hspvar_comobj.h" />
     <ClInclude Include="..\..\hsp3\win32gui\hspvar_variant.h" />
+    <ClInclude Include="..\..\hsp3\win32gui\supio_win.h" />
     <ClInclude Include="..\geometry.h" />
     <ClInclude Include="..\hsp3ext.h" />
     <ClInclude Include="..\hsp3gr.h" />
@@ -270,7 +273,9 @@
     <ClInclude Include="..\supio.h" />
     <ClInclude Include="..\sysreq.h" />
     <ClInclude Include="..\webtask.h" />
-    <ClInclude Include="dxsnd.h" />
+    <ClInclude Include="..\win32\dxsnd.h" />
+    <ClInclude Include="..\win32\mmman.h" />
+    <ClInclude Include="..\win32\webtask_win.h" />
     <ClInclude Include="gamehsp.h" />
     <ClInclude Include="gpcam.h" />
     <ClInclude Include="gplgt.h" />
@@ -278,11 +283,6 @@
     <ClInclude Include="gpphy.h" />
     <ClInclude Include="hgiox.h" />
     <ClInclude Include="hsp3dish.h" />
-    <ClInclude Include="hsp3extlib.h" />
-    <ClInclude Include="hsp3ext_win.h" />
-    <ClInclude Include="mmman.h" />
-    <ClInclude Include="supio_win.h" />
-    <ClInclude Include="webtask_win.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="hsp3.ico" />
