--- a/hsp3dish/win32gp/hsp3gp.vcxproj.filters
+++ b/hsp3dish/win32gp/hsp3gp.vcxproj.filters
@@ -27,9 +27,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="dxsnd.cpp">
-      <Filter>ソース ファイル\win</Filter>
-    </ClCompile>
     <ClCompile Include="gamehsp.cpp">
       <Filter>ソース ファイル\win</Filter>
     </ClCompile>
@@ -52,12 +49,6 @@
       <Filter>ソース ファイル\win</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
-      <Filter>ソース ファイル\win</Filter>
-    </ClCompile>
-    <ClCompile Include="mmman.cpp">
-      <Filter>ソース ファイル\win</Filter>
-    </ClCompile>
-    <ClCompile Include="supio_win.cpp">
       <Filter>ソース ファイル\win</Filter>
     </ClCompile>
     <ClCompile Include="..\..\hsp3\dpmread.cpp">
@@ -102,15 +93,6 @@
     <ClCompile Include="..\..\hsp3\hspvar_str.cpp">
       <Filter>ソース ファイル\core</Filter>
     </ClCompile>
-    <ClCompile Include="hsp3ext_win.cpp">
-      <Filter>ソース ファイル\win</Filter>
-    </ClCompile>
-    <ClCompile Include="hsp3extlib.cpp">
-      <Filter>ソース ファイル\win</Filter>
-    </ClCompile>
-    <ClCompile Include="webtask_win.cpp">
-      <Filter>ソース ファイル\win</Filter>
-    </ClCompile>
     <ClCompile Include="..\hsp3gr_dish.cpp">
       <Filter>ソース ファイル\core</Filter>
     </ClCompile>
@@ -129,11 +111,26 @@
     <ClCompile Include="..\geometry.cpp">
       <Filter>ソース ファイル\core</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\hsp3\win32gui\hsp3ext_win.cpp">
+      <Filter>ソース ファイル\win</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\hsp3\win32gui\hsp3extlib.cpp">
+      <Filter>ソース ファイル\win</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\hsp3\win32gui\supio_win.cpp">
+      <Filter>ソース ファイル\win</Filter>
+    </ClCompile>
+    <ClCompile Include="..\win32\dxsnd.cpp">
+      <Filter>ソース ファイル\win</Filter>
+    </ClCompile>
+    <ClCompile Include="..\win32\mmman.cpp">
+      <Filter>ソース ファイル\win</Filter>
+    </ClCompile>
+    <ClCompile Include="..\win32\webtask_win.cpp">
+      <Filter>ソース ファイル\win</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="dxsnd.h">
-      <Filter>ヘッダー ファイル\win</Filter>
-    </ClInclude>
     <ClInclude Include="gamehsp.h">
       <Filter>ヘッダー ファイル\win</Filter>
     </ClInclude>
@@ -153,12 +150,6 @@
       <Filter>ヘッダー ファイル\win</Filter>
     </ClInclude>
     <ClInclude Include="hsp3dish.h">
-      <Filter>ヘッダー ファイル\win</Filter>
-    </ClInclude>
-    <ClInclude Include="mmman.h">
-      <Filter>ヘッダー ファイル\win</Filter>
-    </ClInclude>
-    <ClInclude Include="supio_win.h">
       <Filter>ヘッダー ファイル\win</Filter>
     </ClInclude>
     <ClInclude Include="..\..\hsp3\dpmread.h">
@@ -209,15 +200,6 @@
     <ClInclude Include="..\..\hsp3\supio.h">
       <Filter>ヘッダー ファイル\core</Filter>
     </ClInclude>
-    <ClInclude Include="webtask_win.h">
-      <Filter>ヘッダー ファイル\win</Filter>
-    </ClInclude>
-    <ClInclude Include="hsp3extlib.h">
-      <Filter>ヘッダー ファイル\win</Filter>
-    </ClInclude>
-    <ClInclude Include="hsp3ext_win.h">
-      <Filter>ヘッダー ファイル\win</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\hsp3\win32gui\hspvar_comobj.h">
       <Filter>ヘッダー ファイル\win</Filter>
     </ClInclude>
@@ -253,6 +235,24 @@
     </ClInclude>
     <ClInclude Include="..\geometry.h">
       <Filter>ヘッダー ファイル\core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\hsp3\win32gui\supio_win.h">
+      <Filter>ヘッダー ファイル\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\hsp3\win32gui\hsp3ext_win.h">
+      <Filter>ヘッダー ファイル\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\hsp3\win32gui\hsp3extlib.h">
+      <Filter>ヘッダー ファイル\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\win32\webtask_win.h">
+      <Filter>ヘッダー ファイル\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\win32\mmman.h">
+      <Filter>ヘッダー ファイル\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\win32\dxsnd.h">
+      <Filter>ヘッダー ファイル\win</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
