--- a/hspcmp/makefile.emscripten
+++ b/hspcmp/makefile.emscripten
@@ -3,6 +3,7 @@ CC = em++
 #CFLAGS = -Wall -DHSPEMSCRIPTEN -fpermissive -s USE_TYPED_ARRAYS=2 -O2 -s NO_EXIT_RUNTIME=1
 #CFLAGS = -Wall -DHSPEMSCRIPTEN -fpermissive -s USE_TYPED_ARRAYS=2 -g4 --js-opts 0 -s NO_EXIT_RUNTIME=1 -std=gnu++11
 CFLAGS = -Wall -DHSPEMSCRIPTEN -fpermissive \
+	   -std=gnu++11 \
 	   -s USE_TYPED_ARRAYS=2 -s NO_EXIT_RUNTIME=1 \
 	   -s DISABLE_EXCEPTION_CATCHING=0 -O2 \
 	   --memory-init-file 0
@@ -10,7 +11,7 @@ CFLAGS = -Wall -DHSPEMSCRIPTEN -fpermissive \
 
 OBJS = ahtmodel.bc ahtobj.bc codegen_utf8.bc comutil.bc errormsg_utf8.bc hsc3.bc \
     hspcmd.bc label.bc localinfo.bc membuf.bc strnote.bc \
-    tagstack.bc token.bc \
+    tagstack.bc token_utf8.bc \
 	win32dll/dpm.bc \
 	emscripten/supio_emscripten.bc emscripten/hspcmp3.bc
 TARGET = hspcmp.js
@@ -31,12 +32,11 @@ codegen_utf8.cpp: codegen.cpp
 errormsg_utf8.cpp: errormsg.cpp
 	iconv -f cp932 -t utf-8 $< > $@
 
+token_utf8.cpp: token.cpp
+	iconv -f cp932 -t utf-8 $< > $@
+
 block3cmp.js: $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $@ $(LIBS)
-
-block3cmp.html: $(OBJS) block3.hsp
-	$(CC) $(CFLAGS) $(OBJS) -o $@ $(LIBS) \
-	--preload-file emscripten/assets@/
 
 hspcmp.html: $(OBJS) assets
 	$(CC) $(CFLAGS) \
