--- a/hsp3/makefile
+++ b/hsp3/makefile
@@ -1,6 +1,6 @@
 #/*-------------------------------------------------------------------------*/
 #
-#   HSPランタイムのビルド。
+#   HSPランタイムのビルド。(mingw用)
 #
 #   GNU make 用メイクファイル
 #
@@ -11,31 +11,59 @@
 #       linux
 #       win32_mingw
 #       win32gui_mingw
-#   のどれか。all, clean を指定する場合も PLATFORM を指定する。
+#       win64gui_mingw
+#   のどれか。
+#   makeにall, cleanを渡す場合もPLATFORMは必要です。
 #
 #   <OBJ> にファイルを指定すると指定したファイルのみをビルド対象にする。
 #   指定しなかった場合は <PLATFORM> に対応した実行ファイルを対象にする。
 #
-#   release を指定するとリリースビルド、それ以外はデバッグビルド。
+#   release を指定するとリリースビルド、そうでなければデバッグビルドを作成できます。
 #
 #   all を指定すると <PLATFORM> に関係したオブジェクトファイル・実行ファイル全てのリビルド。
 #   clean を指定すると <PLATFORM> に関係したオブジェクトファイル・実行ファイルの削除。
-#   cleanall を指定するとそのフォルダ内のすべてのオブジェクトファイル・実行ファイルの削除。
+#   cleanallを指定するとオブジェクトファイルと実行ファイルの削除。
+#
+#   HSPランタイムはWindows 2000以降用です
+#
+#
 #
 #/*-------------------------------------------------------------------------*/
 
 #/*-----------------------------------------------------------*/
 #
-#   必要ならば環境に合わせて includedir, libdir を設定する。
-#   パスを空白で区切って列挙する。(半角スペースを含むパスは""で囲む)
-#
+#   追加インクルードパス (オプション)
 
 includedir =
 libdir =
 
 #/*-----------------------------------------------------------*/
+#
+#   C++のバージョン
 
-RM = rm -f
+CXXVER = -std=gnu++11
+
+#/*-----------------------------------------------------------*/
+#
+#   環境フラグ
+#   それぞれのフラグはお互いと使用可能です
+#
+
+ENVFLAGS =
+
+#コンパクト版ランタイム (win64gui_mingwの場合、これを使用しなければならない)
+#ENVFLAGS = -DHSP_COMPACT -DHSP_COM_UNSUPPORTED
+
+#ユニコード版ランタイム (win32gui_mingw、win64gui_mingw用)
+#ENVFLAGS =  -DHSPUTF8 -DUNICODE -D_UNICODE
+
+#/*-----------------------------------------------------------*/
+#
+#   削除コマンド
+#
+
+LINUXRM = rm -rf
+WINRM = del /Q /F
 
 #/*-----------------------------------------------------------*/
 #
@@ -56,6 +84,10 @@ endif
 
 ifneq ($(filter win32gui_mingw,$(MAKECMDGOALS)),)
     PLATFORM := $(PLATFORM) win32gui_mingw
+endif
+
+ifneq ($(filter win64gui_mingw,$(MAKECMDGOALS)),)
+    PLATFORM := $(PLATFORM) win64gui_mingw
 endif
 
 #/*------------------------------------------*/
@@ -89,24 +121,30 @@ ifneq ($(filter linux,$(PLATFORM)),)
     vpath %.h   ./linux
     vpath %.hpp ./linux
 
+    RM = $(LINUXRM)
+
     CC = gcc
-    CFLAGS_B = -Wall -finput-charset=cp932 -fexec-charset=cp932 \
-               -DHSPLINUX $(addprefix -I,$(includedir))
-    CFLAGS_D = $(CFLAGS_B) -DHSPDEBUG
-    CFLAGS_R = $(CFLAGS_B) -O3 -DNDEBUG
+    ENVFLAGS    +=  -DHSPLINUX -DHSPUTF8
+    CFLAGS_B    =   -Wall -finput-charset=cp932 -fexec-charset=cp932 \
+                    $(ENVFLAGS) $(addprefix -I,$(includedir))
+    CFLAGS_D    =   $(CFLAGS_B) -DHSPDEBUG
+    CFLAGS_R    =   $(CFLAGS_B) -O3 -DNDEBUG
 
     CXX = $(CC)
-    CXXFLAGS_B = $(CFLAGS_B)
-    CXXFLAGS_D = $(CFLAGS_D)
-    CXXFLAGS_R = $(CFLAGS_R)
+    CXXFLAGS_B  =   $(CFLAGS_B) $(CXXVER)
+    CXXFLAGS_D  =   $(CFLAGS_D) $(CXXVER)
+    CXXFLAGS_R  =   $(CFLAGS_R) $(CXXVER)
+
+    AS          =   nasm
+    ASFLAGS     =   $(ASMOPTS) -i$(asmdir) -f elf32 -o
 
     LD = $(CC)
-    LDFLAGS_B = $(addprefix -L,$(libdir)) $(addprefix -l,$(LIBS))
-    LDFLAGS_D = $(LDFLAGS_B)
-    LDFLAGS_R = $(LDFLAGS_B) -s
+    LDFLAGS_B   =   $(LINKOPTS) -s $(addprefix -L,$(libdir)) $(addprefix -l,$(LIBS))
+    LDFLAGS_D   =   $(LDFLAGS_B)
+    LDFLAGS_R   =   $(LDFLAGS_B)
 
-    PF_TARGET_D = hsp3
-    PF_TARGET_R = $(PF_TARGET_D)
+    PF_TARGET_D =   hsp3
+    PF_TARGET_R =   $(PF_TARGET_D)
 
     OBJS = linux/main.o hsp3.o hsp3code.o hsp3debug.o hsp3int.o \
            hspvar_core.o hspvar_double.o hspvar_int.o hspvar_label.o \
@@ -124,51 +162,62 @@ endif
 #
 #   mingw で Windows コンソール版ランタイムをビルド。
 #
-#   mingw32(gcc-3.4.5-20060117-1) + msys で動作確認。
-#
+#   TDM-GCC (GCC 5.10) でこれは確認
 
 ifneq ($(filter win32_mingw,$(PLATFORM)),)
 
     includedir := $(includedir)
     libdir := $(libdir)
 
+    asmdir := ./win32gui/
+
     vpath
     vpath %.c   ./win32 ./win32gui
     vpath %.cpp ./win32 ./win32gui
-    vpath %.h   ./win32 ./win32gui
+    vpath %.h   ./win32 ./win32gui $(asmdir)
     vpath %.hpp ./win32 ./win32gui
     vpath %.rc  ./win32 ./win32gui
+    vpath %.mac $(asmdir)
+    vpath %.asm $(asmdir)
+
+    RM = $(WINRM)
 
     CC = gcc
-    CFLAGS_B = -Wall -Wno-unused -fexceptions -fsigned-char \
-               -finput-charset=cp932 -fexec-charset=cp932 \
-               -mwindows -mconsole \
-               -DWINVER=0x0400 -D_WIN32_IE=0x0500 -DHSPWIN -DHSPCL_WIN \
-               $(addprefix -I,$(includedir))
-    CFLAGS_D = $(CFLAGS_B) -DHSPDEBUG
-    CFLAGS_R = $(CFLAGS_B) -O3 -DNDEBUG
+    ENVFLAGS    +=  -DWINVER=0x0500 -D_WIN32_IE=0x0500 -DHSPWIN -DHSPCL_WIN
+    CFLAGS_B    =   -m32 -Wall -Wno-unused -fexceptions -fsigned-char -finput-charset=cp932 -fexec-charset=cp932 -mwindows -mconsole -Os \
+                    $(ENVFLAGS) $(addprefix -I,$(includedir))
+    CFLAGS_D    =   $(CFLAGS_B) -DHSPDEBUG
+    CFLAGS_R    =   $(CFLAGS_B) -DNDEBUG
 
     CXX = g++
-    CXXFLAGS_B = $(CFLAGS_B)
-    CXXFLAGS_D = $(CFLAGS_D)
-    CXXFLAGS_R = $(CFLAGS_R)
+    CXXFLAGS_B  =   $(CFLAGS_B) $(CXXVER)
+    CXXFLAGS_D  =   $(CFLAGS_D) $(CXXVER)
+    CXXFLAGS_R  =   $(CFLAGS_R) $(CXXVER)
+
+    AS          =   nasm
+    ASFLAGS     =   -i$(asmdir) -f win32 -o
 
     LD = g++
-    LDFLAGS_B = -mwindows -mconsole \
-                $(addprefix -L,$(libdir)) $(addprefix -l,$(LIBS))
-    LDFLAGS_D = $(LDFLAGS_B)
-    LDFLAGS_R = $(LDFLAGS_B) -s
+    LDFLAGS_B   =   -m32 -s -mwindows -mconsole \
+                    $(addprefix -L,$(libdir)) $(addprefix -l,$(LIBS))
+    LDFLAGS_D   =   $(LDFLAGS_B)
+    LDFLAGS_R   =   $(LDFLAGS_B)
 
-    PF_TARGET_D = hsp3cl.exe
-    PF_TARGET_R = $(PF_TARGET_D)
+    PF_TARGET_D =   hsp3cl.exe
+    PF_TARGET_R =   $(PF_TARGET_D)
 
-    OBJS = dpmread.o hsp3.o hsp3code.o hsp3debug.o hsp3int.o hspvar_core.o \
-           hspvar_double.o hspvar_int.o hspvar_label.o hspvar_str.o \
-           hspvar_struct.o stack.o strbuf.o strnote.o \
-           hsp3cl.o hsp3gr_win.o main.o \
-           comobj.o comobj_event.o filedlg.o hsp3ext_win.o hsp3extlib.o \
-           hspvar_comobj.o hspvar_variant.o supio_win.o
-    RESES =
+    RESES       =
+    ASMOBJS     =
+
+    OBJS := dpmread.o hsp3.o hsp3code.o hsp3debug.o hsp3int.o hspvar_core.o \
+            hspvar_double.o hspvar_int.o hspvar_label.o hspvar_str.o \
+            hspvar_struct.o stack.o strbuf.o strnote.o \
+            win32/hsp3cl.o win32/hsp3gr_win.o win32/main.o \
+            win32gui/comobj.o win32gui/comobj_event.o win32gui/filedlg.o win32gui/hsp3ext_win.o win32gui/hsp3extlib.o \
+            win32gui/hspvar_comobj.o win32gui/hspvar_variant.o win32gui/supio_win.o win32gui/supio_win_unicode.o \
+            $(RESES) $(ASMOBJS)
+
+    asmdir = ./win32asm/
     LIBS = comctl32 ole32 oleaut32 uuid
 
 endif
@@ -179,7 +228,7 @@ endif
 #
 #   mingw で Windows GUI 版ランタイムをビルド。
 #
-#   mingw32(gcc-3.4.5-20060117-1) + msys で動作確認。
+#   TDM-GCC (GCC 5.10) でこれは確認。
 #
 
 ifneq ($(filter win32gui_mingw,$(PLATFORM)),)
@@ -187,45 +236,127 @@ ifneq ($(filter win32gui_mingw,$(PLATFORM)),)
     includedir := $(includedir)
     libdir := $(libdir)
 
+    asmdir := ./win32gui/
+
     vpath
     vpath %.c   ./win32gui
     vpath %.cpp ./win32gui
-    vpath %.h   ./win32gui
+    vpath %.h   ./win32gui $(asmdir)
     vpath %.hpp ./win32gui
     vpath %.rc  ./win32gui
+    vpath %.mac $(asmdir)
+    vpath %.asm $(asmdir)
+
+    RM = $(WINRM)
 
     CC = gcc
-    CFLAGS_B = -Wall -Wno-unused -fexceptions -fsigned-char \
-               -finput-charset=cp932 -fexec-charset=cp932 -mwindows \
-               -DWINVER=0x0400 -D_WIN32_IE=0x0500 -DHSPWIN -DHSPWINGUI \
-               $(addprefix -I,$(includedir))
-    CFLAGS_D = $(CFLAGS_B) -DHSPDEBUG
-    CFLAGS_R = $(CFLAGS_B) -O3 -DNDEBUG
+    ENVFLAGS    +=  -DWINVER=0x0500 -D_WIN32_IE=0x0500 -D_WIN32_WINNT=0x0500 -DHSPWIN -DHSPWINGUI
+    CFLAGS_B    =   -m32 -Wall -Wno-unused -fexceptions -fsigned-char -finput-charset=cp932 -fexec-charset=cp932 -mwindows -Os \
+                    $(ENVFLAGS) $(addprefix -I,$(includedir))
+    CFLAGS_D    =   $(CFLAGS_B) -DHSPDEBUG
+    CFLAGS_R    =   $(CFLAGS_B) -DNDEBUG
 
     CXX = g++
-    CXXFLAGS_B = $(CFLAGS_B)
-    CXXFLAGS_D = $(CFLAGS_D)
-    CXXFLAGS_R = $(CFLAGS_R)
+    CXXFLAGS_B  =   $(CFLAGS_B) $(CXXVER)
+    CXXFLAGS_D  =   $(CFLAGS_D) $(CXXVER)
+    CXXFLAGS_R  =   $(CFLAGS_R) $(CXXVER)
+
+    AS          =   nasm
+    ASFLAGS     =   -i$(asmdir) -f win32 -o
+
+    WINDRES     =   windres
+    RCFLAGS     =   -J rc -O coff -F pe-i386
 
     LD = g++
-    LDFLAGS_B = -mwindows $(addprefix -L,$(libdir)) $(addprefix -l,$(LIBS))
-    LDFLAGS_D = $(LDFLAGS_B)
-    LDFLAGS_R = $(LDFLAGS_B) -s
+    LDFLAGS_B   =   -m32 -s -mwindows $(addprefix -L,$(libdir)) $(addprefix -l,$(LIBS))
+    LDFLAGS_D   =   $(LDFLAGS_B)
+    LDFLAGS_R   =   $(LDFLAGS_B)
 
-	WINDRES = windres
+    PF_TARGET_D =   hsp3.exe
+    PF_TARGET_R =   hsprt.exe
 
-    PF_TARGET_D = hsp3.exe
-    PF_TARGET_R = hsprt.exe
+    RESES       =   hsp3.res
+    ASMOBJS     =
 
-    OBJS = dpmread.o hsp3.o hsp3code.o hsp3debug.o hsp3int.o hspvar_core.o \
-           hspvar_double.o hspvar_int.o hspvar_label.o hspvar_str.o \
-           hspvar_struct.o stack.o strbuf.o strnote.o \
-           comobj.o comobj_event.o fcpoly.o filedlg.o hsp3ext_win.o \
-           hsp3extlib.o hsp3gr_wingui.o hsp3win.o hspvar_comobj.o \
-           hspvar_variant.o hspwnd_obj.o hspwnd_win.o main.o mmman.o supio_win.o \
-           $(RESES)
-    RESES = hsp3.res
-    LIBS = comctl32 ole32 oleaut32 uuid winmm
+    OBJS := dpmread.o hsp3.o hsp3code.o hsp3debug.o hsp3int.o hspvar_core.o \
+            hspvar_double.o hspvar_int.o hspvar_label.o hspvar_str.o \
+            hspvar_struct.o stack.o strbuf.o strnote.o \
+            win32gui/comobj.o win32gui/comobj_event.o win32gui/fcpoly.o win32gui/filedlg.o win32gui/hsp3ext_win.o \
+            win32gui/hsp3extlib.o win32gui/hsp3gr_wingui.o win32gui/hsp3win.o win32gui/hspvar_comobj.o \
+            win32gui/hspvar_variant.o win32gui/hspwnd_obj.o win32gui/hspwnd_win.o win32gui/main.o win32gui/mmman.o win32gui/supio_win.o win32gui/supio_win_unicode.o win32gui/stb_image.o \
+            $(RESES) $(ASMOBJS)
+
+    asmdir = ./win32asm/
+    LIBS = comctl32 ole32 oleaut32 uuid winmm msimg32
+
+endif
+
+#/*------------------------------------------*/
+
+#/*------------------------------------------*/
+#
+#   mingw で Windows GUI 版ランタイムをビルド。
+#   Win64ランタイム
+#
+#   TDM-GCC (GCC 5.10) でこれは確認。(コンパクト版のみ確認)
+#
+
+ifneq ($(filter win64gui_mingw,$(PLATFORM)),)
+
+    includedir := $(includedir)
+    libdir := $(libdir)
+
+    asmdir := ./win32gui/
+
+    vpath
+    vpath %.c   ./win32gui
+    vpath %.cpp ./win32gui
+    vpath %.h   ./win32gui $(asmdir)
+    vpath %.hpp ./win32gui
+    vpath %.rc  ./win32gui
+    vpath %.mac $(asmdir)
+    vpath %.asm $(asmdir)
+
+    RM = $(WINRM)
+
+    CC = gcc
+    ENVFLAGS    +=  -DHSP64 -DHSPWIN -DHSPWINGUI
+    CFLAGS_B    =   -m64 -Wall -Wno-unused -fexceptions -fsigned-char -finput-charset=cp932 -fexec-charset=cp932 -mwindows -Os \
+                    $(ENVFLAGS) $(addprefix -I,$(includedir))
+    CFLAGS_D    =   $(CFLAGS_B) -DHSPDEBUG
+    CFLAGS_R    =   $(CFLAGS_B) -DNDEBUG
+
+    CXX = g++
+    CXXFLAGS_B  =   $(CFLAGS_B) $(CXXVER)
+    CXXFLAGS_D  =   $(CFLAGS_D) $(CXXVER)
+    CXXFLAGS_R  =   $(CFLAGS_R) $(CXXVER)
+
+    AS          =   nasm
+    ASFLAGS     =   -i$(asmdir) -f win64 -o
+
+    WINDRES     =   windres
+    RCFLAGS     =   -J rc -O coff
+
+    LD = g++
+    LDFLAGS_B   =   -m64 -s -mwindows $(addprefix -L,$(libdir)) $(addprefix -l,$(LIBS))
+    LDFLAGS_D   =   $(LDFLAGS_B)
+    LDFLAGS_R   =   $(LDFLAGS_B)
+
+    PF_TARGET_D =   hsp3_64.exe
+    PF_TARGET_R =   hsprt.exe
+
+    RESES       =   hsp3.res
+    ASMOBJS     =   win32gui/callex64_nasm.o
+
+    OBJS := dpmread.o hsp3.o hsp3code.o hsp3debug.o hsp3int.o hspvar_core.o \
+            hspvar_double.o hspvar_int.o hspvar_label.o hspvar_str.o \
+            hspvar_struct.o stack.o strbuf.o strnote.o \
+            win32gui/comobj.o win32gui/comobj_event.o win32gui/fcpoly.o win32gui/filedlg.o win32gui/hsp3ext_win.o \
+            win32gui/hsp3extlib.o win32gui/hsp3gr_wingui.o win32gui/hsp3win.o win32gui/hspvar_comobj.o \
+            win32gui/hspvar_variant.o win32gui/hspwnd_obj.o win32gui/hspwnd_win.o win32gui/main.o win32gui/mmman.o win32gui/supio_win.o win32gui/supio_win_unicode.o win32gui/stb_image.o \
+            $(RESES) $(ASMOBJS)
+
+    LIBS = comctl32 ole32 oleaut32 uuid winmm msimg32
 
 endif
 
@@ -252,7 +383,7 @@ endif
 
 #/*------------------------------------------*/
 
-TARGET = $(filter *.o,$(MAKECMDGOALS)) $(filter *.exe,$(MAKECMDGOALS)) $(filter *.dll,$(MAKECMDGOALS))
+TARGET = $(filter *.o *.exe *.dll,$(MAKECMDGOALS))
 
 ifeq ($(words $(TARGET)),0)
     TARGET = $(PF_TARGET)
@@ -261,52 +392,56 @@ endif
 #/*-----------------------------------------------------------*/
 
 EXECMODE =
-RMFILE =
+FILESRM =
+
+ifeq ($(words $(PLATFORM)),1)
+    EXECMODE = exec_target
+endif
 
 ifneq ($(filter cleanall,$(MAKECMDGOALS)),)
     EXECMODE = exec_clean
-    RMFILE = *.o *.exe *.out *.dll *.res
-else
-    ifeq ($(words $(PLATFORM)),1)
-        EXECMODE = exec_target
-    endif
+    FILESRM = $(TARGET)
+    MAKECMDGOALS := $(patsubst cleanall,clean,$(MAKECMDGOALS))
+endif
 
-    ifneq ($(filter clean,$(MAKECMDGOALS)),)
-        EXECMODE = exec_clean
-        RMFILE = $(OBJS) $(TARGET)
+ifneq ($(filter clean,$(MAKECMDGOALS)),)
+    EXECMODE = exec_clean
+    FILESRM += $(OBJS)
+    ifneq "$(PLATFORM)" "linux"
+        FILESRM := $(subst /,\,$(FILESRM))
     endif
+endif
 
-    ifneq ($(filter all,$(MAKECMDGOALS)),)
-        EXECMODE = exec_alltarget
-    endif
+ifneq ($(filter all,$(MAKECMDGOALS)),)
+    EXECMODE = exec_alltarget
+endif
 
-    ifneq ($(words $(PLATFORM)),1)
-        EXECMODE = exec_error_platform
-    endif
+ifneq ($(words $(PLATFORM)),1)
+    EXECMODE = exec_error_platform
 endif
 
 #/*-----------------------------------------------------------*/
 
 .SUFFIXES:
-.SUFFIXES: .c .cpp .h .hpp .o .rc .res
+.SUFFIXES: .c .cpp .h .hpp .mac .asm .o .rc .res
 
 .PHONY: all clean cleanall release \
-        linux win32_mingw win32gui_mingw \
+        linux win32_mingw win32gui_mingw win64gui_mingw \
         exec_alltarget exec_clean exec_error_platform exec_pre_alltarget exec_target
 
 #/*-----------------------------------------------------------*/
 
-linux win32_mingw win32gui_mingw all clean cleanall release: $(EXECMODE)
+linux win32_mingw win32gui_mingw win64gui_mingw all clean cleanall release: $(EXECMODE)
 	@echo -n
 
 #/*-------------------------------------------*/
 
 exec_error_platform:
-	@echo only one platform must be specified.
+	@echo Only one platform must be specified.
 	@exit 1
 
 exec_clean:
-	$(RM) $(RMFILE)
+	$(RM) $(FILESRM)
 
 exec_target: $(TARGET)
 	@echo -n
@@ -328,8 +463,13 @@ $(TARGET): $(OBJS)
 .cpp.o:
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
+.asm.o:
+	$(AS) $(ASFLAGS) $@ $<
+
 .rc.res:
-	$(WINDRES) -i $< --input-format=rc -o $@ -O coff --include-dir $(<D)
+	$(WINDRES) $(RCFLAGS) -i $< -o $@ -I $(<D)
+
+#	$(WINDRES) -i $< --input-format=rc -o $@ -O coff --include-dir $(<D)
 
 #/*-------------------------------------------*/
 
@@ -369,7 +509,7 @@ strnote.o: strnote.cpp strnote.h
 #  ../hsp3/linux
 #
 
-linux/Main.o: hsp3cl.h hsp3config.h
+linux/main.o: hsp3cl.h hsp3config.h
 linux/hsp3cl.o: strbuf.h hsp3.h hsp3debug.h \
   hsp3struct.h hspvar_core.h hsp3ext.h hsp3code.h \
   hsp3config.h supio.h hsp3gr.h
@@ -404,7 +544,7 @@ hspvar_struct.o: hsp3code.h hsp3debug.h \
 stack.o: stack.h hspvar_core.h hsp3debug.h
 strbuf.o: supio.h strbuf.h hsp3debug.h
 strnote.o: strnote.h
-Dpmread.o: dpmread.h supio.h
+dpmread.o: dpmread.h supio.h
 linux/supio_linux.o: linux/supio_linux.h supio.h dpmread.h strbuf.h
 
 
@@ -467,6 +607,11 @@ win32gui/main.o: main.cpp hsp3win.h
 win32gui/mmman.o: mmman.cpp supio.h dpmread.h strbuf.h mmman.h
 win32gui/supio_win.o: supio_win.cpp hsp3config.h supio_win.h dpmread.h \
   strbuf.h
+win32gui/supio_win_unicode.o: supio_win_unicode.cpp hsp3config.h supio_win_unicode.h dpmread.h \
+  strbuf.h
 
-win32gui/hsp3.res: hsp3.rc
+win32gui/stb_image.o: stb_image.c stb_image.h
 
+win32gui/callex64_nasm.o: callex64_nasm.asm sehhdr64_nasm.h
+
+hsp3.res: hsp3.rc
