UTF8版デバッグウィンドウで変数ソート時に落ちる不具合を修正 デバッグ情報がついていたのを修正
Former-commit-id: ed4d66afd9d9705a3fd8e92ce7a5300b33820675

--- a/tools/win32/hsp3debug/hsp3debug_vc2013.vcxproj
+++ b/tools/win32/hsp3debug/hsp3debug_vc2013.vcxproj
@@ -165,11 +165,11 @@ copy $(TargetPath) ..\..\..\hsp3\win32gui\release\
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <DebugInformationFormat>None</DebugInformationFormat>
     </ClCompile>
     <Link>
       <OutputFile>$(OutDir)hsp3debug_u8.dll</OutputFile>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
